# zeropark

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  debug_hang.py  docker-compose.yml  mcp_servers.json.example  oss-sources.yml  pyproject.toml
docs/: README.md  oss-source-map.md  project.yml
docs/01-planning/: api-spec.md  architecture.md  capability-roadmap.md  decision-log.md  development-spec.md  product-requirements.md  wbs.md
docs/01-planning/architecture/: architecture.md  dependency-isolation.md  system-flow.md
docs/01-planning/wbs/: wbs.md
docs/02-progress/: backlog.md  blockers.md  progress.md
docs/02-progress/notes/: README.md  note-template.md
docs/02-progress/tasks/: task-template.md
docs/03-quality/: test-plan.md
docs/04-operations/: deploy-guide.md  release-notes.md
docs/05-governance/: dashboard-integration.md  developer-guide.md  llm-usage-policy.md  version-control.md
docs/integration/: README.md  zeropark-client.ts
docs/runbooks/: run-local-oss.md  smoke-test-results.md
docs/superpowers/plans/: 2026-06-23-assistant-mode.md
docs/superpowers/specs/: 2026-06-17-3tier-user-test-plan-design.md  2026-06-23-assistant-mode-design.md
plans/: genspark-like-oss-build.md
scripts/: check-services.ps1  e2e_smoke.py  fetch-oss.ps1
services/control-plane/: Dockerfile  pyproject.toml
services/control-plane/src/zeropark_control/: dashboard.py  main.py
services/control-plane/tests/: test_control_plane.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/src/: mcp_servers.json
services/gateway/src/zeropark_gateway/: __init__.py  admin.py  apps.py  auth.py  catalog.py  conversations.py  dataset.py  exceptions.py  jobs.py  knowledge.py  main.py  models.py  observability.py  prompt.py  settings.py  workflow.py
services/gateway/tests/: test_admin_api.py  test_app.py  test_apps_and_collections.py  test_auth_hardening.py  test_catalog.py  test_conversations.py  test_e2e_capabilities.py  test_exceptions.py  test_oauth.py  test_profile.py  test_usage.py
services/mcp-server/: pyproject.toml
services/mcp-server/src/zeropark_mcp/: server.py
tests/: dummy_customer_mcp.py  test_auth.py  test_docker_sandbox.py  test_rbac.py  test_workflow.py
