[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeropark-gateway"
version = "0.1.0"
description = "HTTP API for the Zeropark native AI-workspace framework."
requires-python = ">=3.11"
dependencies = [
    "zeropark-core>=0.1.0",
    "zeropark-engines>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "ruff>=0.6.0"]

[tool.uv.sources]
zeropark-core = { workspace = true }
zeropark-engines = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]
