[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeropark-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Zeropark Engines"
dependencies = [
    "zeropark-core",
    "zeropark-engines",
    "mcp>=0.1.0"
]

[project.scripts]
zeropark-mcp = "zeropark_mcp.server:main"
